--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           padding: 0;
       }
       body {
-  overflow: hidden; /* Hide scrollbars */
+        overflow-x: hidden;
 }
     </style>
   </head>
